# demo-lvgl

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  lv_conf.defaults  lv_conf.h  lv_drv_conf.h  main.c
src/: main.c  mouse_cursor_icon.c
